leetcode and ignore files

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,7 @@ hello_django_docker_compose
 hello_docker_django_vscode
 workshop1
 nucamp-private-key.pem
-week3
+advanced_pytest
+basic_pytest
+python_unittest
+workflows_demo
